[package]
name = "search_and_sip_crawler"
version = "0.1.0"
authors = ["Alexander Montgomery <evaderxander@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.8"
scraper = "0.12.0"
select = "0.5.0"